--- a/Norriq-Solutions/Norriq-Solutions.vbproj
+++ b/Norriq-Solutions/Norriq-Solutions.vbproj
@@ -203,7 +203,8 @@
     </None>
     <None Include="packages.config" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
-    <Content Include="NORRIQ-logo.png" />
+    <Content Include="image\NORRIQ-Logo-WhiteBlue.svg" />
+    <Content Include="image\NORRIQ-logo.png" />
     <Content Include="Pages\NORRIQFrontPage.html" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
