--- a/Norriq-Solutions/Norriq-Solutions.vbproj
+++ b/Norriq-Solutions/Norriq-Solutions.vbproj
@@ -210,6 +210,7 @@
     <Content Include="image\NORRIQ-Logo-WhiteBlue.svg" />
     <Content Include="image\NORRIQ-logo.png" />
     <Content Include="image\NORRIQCareIcon.png" />
+    <Content Include="image\NORRIQSolutionsLogo.jpg" />
     <Content Include="image\NORRIQSolutionsLogo.png" />
     <Content Include="image\SearchIcon.png" />
     <Content Include="Pages\NORRIQFrontPage.html" />
