--- a/Norriq-Solutions/Norriq-Solutions.vbproj
+++ b/Norriq-Solutions/Norriq-Solutions.vbproj
@@ -214,7 +214,10 @@
     <Content Include="image\NORRIQSolutionsLogo.png" />
     <Content Include="image\SearchIcon.png" />
     <Content Include="Pages\NORRIQFrontPage.html" />
+    <Content Include="Pages\NORRIQSolutionsApplication.html" />
     <Content Include="Pages\NORRIQSolutionsPage.html" />
+    <Content Include="Pages\NORRIQSolutionsWebshop.html" />
+    <Content Include="Pages\NORRIQSolutionsWebsite.html" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
     <Content Include="Scripts\jquery-3.4.1.slim.js" />
@@ -233,6 +236,7 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
+    <Content Include="Scripts\NORRIQSolutions.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
