--- a/Norriq-Solutions/Norriq-Solutions.vbproj
+++ b/Norriq-Solutions/Norriq-Solutions.vbproj
@@ -214,6 +214,8 @@
     <Content Include="image\NORRIQSolutionsLogo.png" />
     <Content Include="image\SearchIcon.png" />
     <Content Include="image\video-1606146246.mp4" />
+    <Content Include="Pages\BusinessPage.html" />
+    <Content Include="Pages\FunctionPage.html" />
     <Content Include="Pages\NORRIQFrontPage.html" />
     <Content Include="Pages\NORRIQSolutionsApplication.html" />
     <Content Include="Pages\NORRIQSolutionsPage.html" />
