--- a/Norriq-Solutions/Norriq-Solutions.vbproj
+++ b/Norriq-Solutions/Norriq-Solutions.vbproj
@@ -217,6 +217,7 @@
     <Content Include="Pages\ApplicationTypePage.html" />
     <Content Include="Pages\BusinessPage.html" />
     <Content Include="Pages\FunctionPage.html" />
+    <Content Include="Pages\LanguagePage.html" />
     <Content Include="Pages\NORRIQFrontPage.html" />
     <Content Include="Pages\NORRIQSolutionsApplication.html" />
     <Content Include="Pages\NORRIQSolutionsPage.html" />
