--- a/Norriq-Solutions/Norriq-Solutions.vbproj
+++ b/Norriq-Solutions/Norriq-Solutions.vbproj
@@ -217,6 +217,7 @@
     <Content Include="image\video-1606146246.mp4" />
     <Content Include="Pages\ApplicationTypePage.html" />
     <Content Include="Pages\BusinessPage.html" />
+    <Content Include="Pages\ConfirmationPage.html" />
     <Content Include="Pages\CreateUserPage.html" />
     <Content Include="Pages\DesignIdeasPage.html" />
     <Content Include="Pages\FunctionPage.html" />
