--- a/Norriq-Solutions/Norriq-Solutions.vbproj
+++ b/Norriq-Solutions/Norriq-Solutions.vbproj
@@ -215,6 +215,7 @@
     <Content Include="image\NORRIQSolutionsLogo.png" />
     <Content Include="image\SearchIcon.png" />
     <Content Include="image\video-1606146246.mp4" />
+    <Content Include="Pages\AdminPage.html" />
     <Content Include="Pages\ApplicationTypePage.html" />
     <Content Include="Pages\BusinessPage.html" />
     <Content Include="Pages\ConfirmationPage.html" />
